--- a/sass/type/_placeholders.scss
+++ b/sass/type/_placeholders.scss
@@ -9,3 +9,10 @@
     }
   }
 }
+
+
+@each $color in map-keys($colors) {
+  %#{$type-name}--#{$color} {
+    color: map-get($colors, $color);
+  }
+}
