--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,6 +8,7 @@ $border: rgba(0, 0, 0, 0.12) !default;
 $dark-border: rgba(0, 0, 0, 0.24) !default;
 $border-width: 1px !default;
 $border-style: solid !default;
+$border-radius: 2px;
 
 
 // Body */
