--- a/sass/ui/nav/dropdown/_variables.scss
+++ b/sass/ui/nav/dropdown/_variables.scss
@@ -3,7 +3,7 @@ $dropdown-class: unquote("#{unquote(".")}#{$dropdown-name}") !default;
 $dropdown-background: $white !default;
 $dropdown-border-color: $border !default;
 $dropdown-border-style: solid !default;
-$dropdown-border-width: 1px !default;
+$dropdown-border-width: $border-width !default;
 $dropdown-border-radius: 2px;
 $dropdown-shadow: 0 4px 6px 0px $dark-border;
 $dropdown-padding-top: 0 !default;
@@ -48,22 +48,22 @@ $dropdown-toggler-background: none !default;
 $dropdown-toggler-color: $grey !default;
 $dropdown-toggler-border-color: $border !default;
 $dropdown-toggler-border-style: solid !default;
-$dropdown-toggler-border-width: 1px !default;
+$dropdown-toggler-border-width: $border-width !default;
 $dropdown-toggler-border-radius: 3px;
 $dropdown-toggler-line-height: 1.1;
 
 $dropdown-toggler-hover-background: none !default;
 $dropdown-toggler-hover-color: lighten($dropdown-toggler-color, 10%) !default;
-$dropdown-toggler-hover-border-color: $dropdown-toggler-hover-color !default;
+$dropdown-toggler-hover-border-color: $dropdown-toggler-border-color !default;
 $dropdown-toggler-hover-border-style: solid !default;
-$dropdown-toggler-hover-border-width: 1px !default;
+$dropdown-toggler-hover-border-width: $border-width !default;
 $dropdown-toggler-hover-border-radius: 3px;
 
 $dropdown-toggler-active-background: lighten($dropdown-toggler-color, 55%) !default;
 $dropdown-toggler-active-color: $dropdown-toggler-color !default;
-$dropdown-toggler-active-border-color: $border !default;
+$dropdown-toggler-active-border-color: $dropdown-toggler-border-color !default;
 $dropdown-toggler-active-border-style: solid !default;
-$dropdown-toggler-active-border-width: 1px !default;
+$dropdown-toggler-active-border-width: $border-width !default;
 $dropdown-toggler-active-border-radius: 3px !default;
 
 $dropdown-heading-font-size: 14px !default;
