--- a/sass/ui/card/_variables.scss
+++ b/sass/ui/card/_variables.scss
@@ -1,17 +1,17 @@
 $card-name: 'card' !default;
 $card-class: unquote("#{unquote(".")}#{$card-name}") !default;
 $card-background: $white !default;
-$card-border-width: 1px !default;
+$card-border-width: $border-width !default;
 $card-border-style: solid !default;
 $card-border-color: $border !default;
 $card-border-radius: 2px;
 
 $card-header-background: darken($lightest-grey, 1%) !default;
-$card-header-border-width: 1px 0 !default;
+$card-header-border-width: $border-width 0 !default;
 $card-header-border-color: $light-border !default;
 $card-header-border-style: solid !default;
 
 $card-footer-background: $card-header-background !default;
-$card-footer-border-width: 1px 0 !default;
+$card-footer-border-width: $border-width 0 !default;
 $card-footer-border-color: $card-header-border-color !default;
 $card-footer-border-style: $card-header-border-style !default;
