--- a/sass/ui/form/_layout.scss
+++ b/sass/ui/form/_layout.scss
@@ -47,7 +47,7 @@ input[type=url],
 input[type=password],
 input[type=date],
 input[type=search] {
-  @extend %pill;
+  border-radius: $input-text-border-radius;
   background: $input-text-background;
   padding: $input-text-padding-top $input-text-padding-right
            $input-text-padding-bottom $input-text-padding-left;
@@ -68,16 +68,27 @@ input[type=search] {
   @extend %#{$flex-name}--y-stretch;
   @extend %#{$flex-name}--x-center;
   position: relative;
+
   input {
     @extend %#{$flex-name}--fluid;
   }
+
+  label, .input-group__member {
+    @extend input[type=text];
+    background: darken($input-text-background, 5%);
+  }
+
   & > * {
     @extend %#{$flex-name}--fixed;
+    @extend %#{$flex-name}--y-center;
+    margin: 0;
   }
+
   & > *:first-child:not(:last-child) {
     border-top-right-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
   }
+
   & > *:last-child:not(:first-child) {
     border-left: 0 !important;
     border-top-left-radius: 0 !important;
@@ -90,14 +101,7 @@ input[type=search] {
 }
 
 
-.input-group--grow {
-  @extend %#{$flex-name}--grow;
-}
-
-
-.input-group--shrink {
-  @extend %#{$flex-name}--shrink;
-}
+@include extend-flex('input-group', ('.input-group'));
 
 
 // Submit Buttons */
@@ -108,7 +112,7 @@ button[type=submit], input[type=submit] {
   padding: $submit-padding-top $submit-padding-right
            $submit-padding-bottom $submit-padding-left;
   margin: $submit-margin;
-  @include border-radius($submit-border-radius);
+  border-radius: $submit-border-radius;
   @include font-line($submit-font-size, $submit-line-height,
                      $color: $submit-font-color,
                      $weight: $submit-font-weight,
@@ -121,14 +125,16 @@ button[type=submit], input[type=submit] {
 
 
 .no-touchevents button[type=submit],
-.no-touchevents button.submit {
+.no-touchevents input[type=submit] {
   &:hover {
     cursor: pointer;
     background: $submit-background-hover;
+    color: $submit-font-color;
   }
 
   &:active {
     background: $submit-background-active;
+    color: $submit-font-color;
   }
 }
 
@@ -140,7 +146,7 @@ textarea {
            $textarea-padding-bottom $textarea-padding-left;
   margin: $textarea-margin;
   border: $textarea-border;
-  @include border-radius($textarea-border-radius);
+  border-radius: $textarea-border-radius;
   @include font-line($textarea-font-size, $textarea-line-height,
                      $color: $textarea-font-color,
                      $weight: $textarea-font-weight,
@@ -180,43 +186,4 @@ textarea {
 *:-ms-input-placeholder {
   /* IE 10+ */
   @extend .placeholder;
-}
-
-
-// Wrappers */
-.table-form {
-  display: table;
-  padding: 15px;
-  position: relative;
-}
-
-
-.table-form__row {
-  display: table-row;
-  position: relative;
-}
-
-
-.table-form__cell {
-  display: table-cell;
-  position: relative;
-}
-
-
-.table-form__wrapper {
-  position: relative;
-}
-
-
-.flex-form {
-  @extend %#{$flex-name};
-}
-
-
-fieldset.table-form__cell {
-  label:after {
-    display: block;
-    content: "";
-    clear: both;
-  }
 }
