--- a/sass/grid/_layout.scss
+++ b/sass/grid/_layout.scss
@@ -1,163 +1,166 @@
-#{$grid-row-class} {
-  @extend %#{$grid-row-name};
-}
-
-
-#{$grid-col-class} {
-  @extend %#{$grid-col-name};
-}
-
-
-.no-flexbox.no-flexboxlegacy.no-flexboxtweener #{$grid-row-class} {
-  display: block;
-  width: 100%;
-}
-
-
-/** Cross-browser grids */
-#{$float-grid-col-class},
-#{$grid-col-class} {
-  position: relative;
-}
-
-
-#{$float-grid-col-class},
-#{$float-grid-row-class},
-#{$grid-col-class},
-#{$grid-row-class},
-#{$grid-body-class},
-#{$float-grid-body-class} {
-  @include prefix((box-sizing: border-box), webkit moz);
-  &:after, &:before {
-    @include prefix((box-sizing: border-box), webkit moz);
-  }
-}
-
-
-#{$float-grid-col-class},
-.no-flexbox.no-flexboxlegacy.no-flexboxtweener #{$grid-col-class} {
-  position: relative;
-  float: left;
-  display: inline-block;
-}
-
-
-#{$float-grid-row-class},
-.no-flexbox.no-flexboxlegacy.no-flexboxtweener #{$grid-row-class} {
-  &:before, &:after {
-      content: " ";
-      display: table;
-  }
-  &:after {
-      clear: both;
-  }
-}
-
-
-// Grid row gutters
-@each $size in map-keys($grid-breakpoint) {
-  @media #{map-get($grid-breakpoint, $size)} {
-    #{$grid-row-class},
-    #{$float-grid-row-class} {
-      padding: 0 map-get($grid-gutter, $size) / 2 0;
+$-GRID-LOADED: false;
+@mixin grid-init() {
+  @if not $-GRID-LOADED {
+    $-GRID-LOADED: true !global;
+    
+    #{$grid-row-class} {
+      @extend %#{$grid-row-name};
     }
+
+
+    #{$grid-col-class} {
+      @extend %#{$grid-col-name};
+    }
+
+
+    .no-flexbox.no-flexboxlegacy.no-flexboxtweener #{$grid-row-class} {
+      display: block;
+      width: 100%;
+    }
+
+
+    /** Cross-browser grids */
+    #{$float-grid-col-class},
+    #{$grid-col-class} {
+      position: relative;
+    }
+
+
+    #{$float-grid-col-class},
+    #{$float-grid-row-class},
+    #{$grid-col-class},
+    #{$grid-row-class},
+    #{$grid-body-class},
+    #{$float-grid-body-class} {
+      @include prefix((box-sizing: border-box), webkit moz);
+      &:after, &:before {
+        @include prefix((box-sizing: border-box), webkit moz);
+      }
+    }
+
+
+    #{$float-grid-col-class},
+    .no-flexbox.no-flexboxlegacy.no-flexboxtweener #{$grid-col-class} {
+      position: relative;
+      float: left;
+      display: inline-block;
+    }
+
+
+    #{$float-grid-row-class},
+    .no-flexbox.no-flexboxlegacy.no-flexboxtweener #{$grid-row-class} {
+      &:before, &:after {
+          content: " ";
+          display: table;
+      }
+      &:after {
+          clear: both;
+      }
+    }
+
+
+    // Grid row gutters
+    @each $size in ('xl', 'l', 'm', 's', 'xs') {
+      @media #{map-get($grid-breakpoint, $size)} {
+        #{$grid-row-class},
+        #{$float-grid-row-class} {
+          padding: 0 map-get($grid-gutter, $size) / 2 0;
+        }
+      }
+    }
+
+
+    // Grid breakpoints / grid col padding / widths
+    @include grid(map-get($grid-columns, xl), map-get($grid-gutter, xl));
+
+
+    @media #{map-get($grid-breakpoint, m)} {
+      @include grid(map-get($grid-columns, xl),
+                    map-get($grid-gutter, m),
+                    $multiple: map-get($grid-columns, xl) / map-get($grid-columns, m),
+                    $breakpoint: 'm');
+      @include grid(map-get($grid-columns, m),
+                    map-get($grid-gutter, m),
+                    $name-ext: 'm',
+                    $breakpoint: 'm');
+    }
+
+
+    @media #{map-get($grid-breakpoint, l)} {
+      @include grid(map-get($grid-columns, xl),
+                    map-get($grid-gutter, l),
+                    $multiple: map-get($grid-columns, xl) / map-get($grid-columns, l),
+                    $breakpoint: 'l');
+      @include grid(map-get($grid-columns, l),
+                    map-get($grid-gutter, l),
+                    $name-ext: 'l',
+                    $breakpoint: 'l');
+    }
+
+
+    @media #{map-get($grid-breakpoint, xl)} {
+      @include grid(map-get($grid-columns, xl),
+                    map-get($grid-gutter, xl),
+                    $name-ext: 'xl',
+                    $breakpoint: 'xl');
+    }
+
+
+    @media #{map-get($grid-breakpoint, s)} {
+      @include grid(map-get($grid-columns, xl),
+                    map-get($grid-gutter, s),
+                    $multiple: map-get($grid-columns, xl) / map-get($grid-columns, s),
+                    $breakpoint: 's');
+      @include grid(map-get($grid-columns, s),
+                    map-get($grid-gutter, s),
+                    $name-ext: 's',
+                    $breakpoint: 's');
+    }
+
+
+    @media #{map-get($grid-breakpoint, xs)} {
+      @include grid(map-get($grid-columns, xl),
+                    map-get($grid-gutter, xs),
+                    $multiple: map-get($grid-columns, xl) / map-get($grid-columns, xs),
+                    $breakpoint: 'xs');
+      @include grid(map-get($grid-columns, xs),
+                    map-get($grid-gutter, xs),
+                    $name-ext: 'xs',
+                    $breakpoint: 'xs');
+    }
+
+
+    // Hider classes
+    @each $size in map-keys($grid-breakpoint) {
+      .hide--#{$size}, .x0--#{$size} {
+        @extend %hide--#{$size};
+      }
+    }
+
+
+    // Float grid
+    #{$grid-body-class},
+    #{$float-grid-body-class} {
+      display: block;
+      width: 100%;
+    }
+
+
+    #{$float-grid-body-class} {
+      float: left;
+    }
+
+
+    #{$grid-class}--nopad,
+    #{$grid-row-class}--nopad,
+    #{$grid-col-class}--nopad,
+    #{$float-grid-row-class}--nopad,
+    #{$float-grid-col-class}--nopad  {
+      padding: 0;
+    }
+
+
+    // Flex modifiers
+    @include extend-flex($grid-name, ('', '.col', '.row'));
   }
 }
-
-
-// Grid breakpoints / grid col padding / widths
-@include grid(map-get($grid-columns, l), map-get($grid-gutter, l));
-
-
-@media #{map-get($grid-breakpoint, m)} {
-  @include grid(map-get($grid-columns, l),
-                map-get($grid-gutter, m),
-                $multiple: map-get($grid-columns, l) / map-get($grid-columns, m),
-                $breakpoint: 'm');
-  @include grid(map-get($grid-columns, m),
-                map-get($grid-gutter, m),
-                $name-ext: 'm',
-                $breakpoint: 'm');
-}
-
-
-@media #{map-get($grid-breakpoint, l)} {
-  @include grid(map-get($grid-columns, l), map-get($grid-gutter, l),
-                $breakpoint: 'l');
-  @include grid(map-get($grid-columns, l),
-                map-get($grid-gutter, l),
-                $name-ext: 'l',
-                $breakpoint: 'l');
-}
-
-
-@media #{map-get($grid-breakpoint, xl)} {
-  @for $x from 1 through map-get($grid-columns, xl) {
-    $gutter-size: map-get($grid-gutter, xl);
-    $breakpoint: 'xl';
-    @include make-gutter($x, $gutter-size, $breakpoint);
-  }
-
-  @include grid(map-get($grid-columns, xl),
-                map-get($grid-gutter, xl),
-                $name-ext: 'xl',
-                $breakpoint: 'xl');
-}
-
-
-@media #{map-get($grid-breakpoint, s)} {
-  @include grid(map-get($grid-columns, l),
-                map-get($grid-gutter, s),
-                $multiple: map-get($grid-columns, l) / map-get($grid-columns, s),
-                $breakpoint: 's');
-  @include grid(map-get($grid-columns, xs),
-                map-get($grid-gutter, s),
-                $name-ext: 's',
-                $breakpoint: 's');
-}
-
-
-@media #{map-get($grid-breakpoint, xs)} {
-  @include grid(map-get($grid-columns, l),
-                map-get($grid-gutter, xs),
-                $multiple: map-get($grid-columns, l) / map-get($grid-columns, xs),
-                $breakpoint: 'xs');
-  @include grid(map-get($grid-columns, l),
-                map-get($grid-gutter, xs),
-                $name-ext: 'xs',
-                $breakpoint: 'xs');
-}
-
-
-// Hider classes
-@each $size in map-keys($grid-breakpoint) {
-  .hide--#{$size}, .x0--#{$size} {
-    @extend %hide--#{$size};
-  }
-}
-
-
-// Float grid
-#{$grid-body-class},
-#{$float-grid-body-class} {
-  display: block;
-  width: 100%;
-}
-
-
-#{$float-grid-body-class} {
-  float: left;
-}
-
-
-#{$grid-class}--nopad,
-#{$grid-row-class}--nopad,
-#{$grid-col-class}--nopad,
-#{$float-grid-row-class}--nopad,
-#{$float-grid-col-class}--nopad  {
-  padding: 0;
-}
-
-
-// Flex modifiers
-@include extend-flex($grid-name, ('', '.col', '.row'));
