--- a/sass/grid/_placeholders.scss
+++ b/sass/grid/_placeholders.scss
@@ -1,142 +1,149 @@
-%#{$grid-row-name} {
-  @extend %#{$flex-name};
-  @include flex-wrap(wrap);
-  @include flex-direction(row);
-  @include flex-basis(100%);
-}
-
-
-%#{$grid-col-name} {
-  @extend %#{$flex-name}--fluid;
-}
-
-
-%media-padding-gutters,
-%media-gutters {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      padding: map-get($grid-gutter, $size);
+$-GRID-PLACEHOLDERS-LOADED: false;
+@mixin grid-placeholders-init() {
+  @if not $-GRID-PLACEHOLDERS-LOADED {
+    $-GRID-PLACEHOLDERS-LOADED: true;
+    
+    %#{$grid-row-name} {
+      @extend %#{$flex-name};
+      @include flex-wrap(wrap);
+      @include flex-direction(row);
+      @include flex-basis(100%);
     }
-  }
-}
 
 
-%media-padding-gutters-x,
-%media-gutters-x {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      padding-left: map-get($grid-gutter, $size);
-      padding-right: map-get($grid-gutter, $size);
+    %#{$grid-col-name} {
+      @extend %#{$flex-name}--fluid;
     }
-  }
-}
 
 
-%media-padding-gutters-y,
-%media-gutters-y {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      padding-top: map-get($grid-gutter, $size);
-      padding-bottom: map-get($grid-gutter, $size);
+    %media-padding-gutters,
+    %media-gutters {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          padding: map-get($grid-gutter, $size);
+        }
+      }
     }
-  }
-}
 
 
-%media-padding-gutters-half,
-%media-gutters-half {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      padding: round(map-get($grid-gutter, $size) / 2);
+    %media-padding-gutters-x,
+    %media-gutters-x {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          padding-left: map-get($grid-gutter, $size);
+          padding-right: map-get($grid-gutter, $size);
+        }
+      }
     }
-  }
-}
 
 
-%media-padding-gutters-half-x,
-%media-gutters-half-x {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      padding-left: round(map-get($grid-gutter, $size) / 2);
-      padding-right: round(map-get($grid-gutter, $size) / 2);
+    %media-padding-gutters-y,
+    %media-gutters-y {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          padding-top: map-get($grid-gutter, $size);
+          padding-bottom: map-get($grid-gutter, $size);
+        }
+      }
     }
-  }
-}
 
 
-%media-padding-gutters-half-y,
-%media-gutters-half-y {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      padding-top: round(map-get($grid-gutter, $size) / 2);
-      padding-bottom: round(map-get($grid-gutter, $size) / 2);
+    %media-padding-gutters-half,
+    %media-gutters-half {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          padding: round(map-get($grid-gutter, $size) / 2);
+        }
+      }
     }
-  }
-}
 
 
-%media-margin-gutters {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      margin: map-get($grid-gutter, $size);
+    %media-padding-gutters-half-x,
+    %media-gutters-half-x {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          padding-left: round(map-get($grid-gutter, $size) / 2);
+          padding-right: round(map-get($grid-gutter, $size) / 2);
+        }
+      }
     }
-  }
-}
 
 
-%media-margin-gutters-y {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      margin-top: map-get($grid-gutter, $size);
-      margin-bottom: map-get($grid-gutter, $size);
+    %media-padding-gutters-half-y,
+    %media-gutters-half-y {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          padding-top: round(map-get($grid-gutter, $size) / 2);
+          padding-bottom: round(map-get($grid-gutter, $size) / 2);
+        }
+      }
     }
-  }
-}
 
 
-%media-margin-gutters-x {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      margin-left: map-get($grid-gutter, $size);
-      margin-right: map-get($grid-gutter, $size);
+    %media-margin-gutters {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          margin: map-get($grid-gutter, $size);
+        }
+      }
     }
-  }
-}
 
 
-%media-margin-gutters-half {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      margin: round(map-get($grid-gutter, $size) / 2);
+    %media-margin-gutters-y {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          margin-top: map-get($grid-gutter, $size);
+          margin-bottom: map-get($grid-gutter, $size);
+        }
+      }
     }
-  }
-}
 
 
-%media-margin-gutters-half-y {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      margin-top: round(map-get($grid-gutter, $size) / 2);
-      margin-bottom: round(map-get($grid-gutter, $size) / 2);
+    %media-margin-gutters-x {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          margin-left: map-get($grid-gutter, $size);
+          margin-right: map-get($grid-gutter, $size);
+        }
+      }
     }
-  }
-}
 
 
-%media-margin-gutters-half-x {
-  @each $size in map-keys($grid-breakpoint) {
-    @media #{map-get($grid-breakpoint, $size)} {
-      margin-left: round(map-get($grid-gutter, $size) / 2);
-      margin-right: round(map-get($grid-gutter, $size) / 2);
+    %media-margin-gutters-half {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          margin: round(map-get($grid-gutter, $size) / 2);
+        }
+      }
     }
-  }
-}
 
 
-@each $size in map-keys($grid-breakpoint) {
-  %hide--#{$size} {
-    @media #{map-get($grid-breakpoint, $size)} {
-      display: none;
+    %media-margin-gutters-half-y {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          margin-top: round(map-get($grid-gutter, $size) / 2);
+          margin-bottom: round(map-get($grid-gutter, $size) / 2);
+        }
+      }
+    }
+
+
+    %media-margin-gutters-half-x {
+      @each $size in ('xl', 'l', 'm', 's', 'xs') {
+        @media #{map-get($grid-breakpoint, $size)} {
+          margin-left: round(map-get($grid-gutter, $size) / 2);
+          margin-right: round(map-get($grid-gutter, $size) / 2);
+        }
+      }
+    }
+
+
+    @each $size in ('xl', 'l', 'm', 's', 'xs') {
+      %hide--#{$size} {
+        @media #{map-get($grid-breakpoint, $size)} {
+          display: none !important;
+        }
+      }
     }
   }
 }
