--- a/sass/spacing/_variables.scss
+++ b/sass/spacing/_variables.scss
@@ -1,3 +1,3 @@
 // padding + margins
 $spacing-sizes: (0, 4px, 8px, 12px, 16px, 20px, 24px, 28px, 32px, 36px, 40px,
-                 44px, 48px) !default;
+                 44px, 48px, 52px, 56px, 60px) !default;
