--- a/sass/ui/nav/dropdown/_variables.scss
+++ b/sass/ui/nav/dropdown/_variables.scss
@@ -4,15 +4,15 @@ $dropdown-background: $white !default;
 $dropdown-border-color: $border !default;
 $dropdown-border-style: solid !default;
 $dropdown-border-width: $border-width !default;
-$dropdown-border-radius: 2px;
-$dropdown-shadow: 0 4px 6px 0px $dark-border;
+$dropdown-border-radius: 2px !default;
+$dropdown-shadow: 0 4px 6px 0px $dark-border !default;
 $dropdown-padding-top: 0 !default;
 $dropdown-padding-right: $dropdown-padding-top * 2 !default;
 $dropdown-padding-bottom: $dropdown-padding-top !default;
 $dropdown-padding-left: $dropdown-padding-right !default;
-$dropdown-text-align: left;
+$dropdown-text-align: left !default;
 $dropdown-width: auto !default;
-$dropdown-min-width: 100%;
+$dropdown-min-width: 100% !default;
 
 $dropdown-link-color: $darkest-grey !default;
 $dropdown-link-background: $white !default;
@@ -49,15 +49,15 @@ $dropdown-toggler-color: $grey !default;
 $dropdown-toggler-border-color: $border !default;
 $dropdown-toggler-border-style: solid !default;
 $dropdown-toggler-border-width: $border-width !default;
-$dropdown-toggler-border-radius: 3px;
-$dropdown-toggler-line-height: 1.1;
+$dropdown-toggler-border-radius: 3px !default;
+$dropdown-toggler-line-height: 1.1 !default;
 
 $dropdown-toggler-hover-background: none !default;
 $dropdown-toggler-hover-color: lighten($dropdown-toggler-color, 10%) !default;
 $dropdown-toggler-hover-border-color: $dropdown-toggler-border-color !default;
 $dropdown-toggler-hover-border-style: solid !default;
 $dropdown-toggler-hover-border-width: $border-width !default;
-$dropdown-toggler-hover-border-radius: 3px;
+$dropdown-toggler-hover-border-radius: 3px !default;
 
 $dropdown-toggler-active-background: lighten($dropdown-toggler-color, 55%) !default;
 $dropdown-toggler-active-color: $dropdown-toggler-color !default;
@@ -66,9 +66,9 @@ $dropdown-toggler-active-border-style: solid !default;
 $dropdown-toggler-active-border-width: $border-width !default;
 $dropdown-toggler-active-border-radius: 3px !default;
 
-$dropdown-heading-font-size: 14px !default;
+$dropdown-heading-font-size: 12px !default;
 $dropdown-heading-line-height: 1.1 !default;
-$dropdown-heading-color: $dropdown-toggler-color !default;
+$dropdown-heading-color: $grey !default;
 $dropdown-heading-weight: 400 !default;
 $dropdown-heading-padding-top: 8px !default;
 $dropdown-heading-padding-right: 12px !default;
